--- a/src/stylesheet/styles.main.css
+++ b/src/stylesheet/styles.main.css
@@ -6,7 +6,7 @@ body {
     padding: 0;
     box-sizing: border-box;
     /* background-image: linear-gradient(315deg, #090947 0%, #5a585a 74%); */
-    background-color: black;
+    /* background-color: black; */
 }
 
 .main {
